--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/react-window": "^1.8.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.6",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.379.0",
     "masonic": "^4.0.1",
     "next": "14.2.3",
