--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-window": "^1.8.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookies-next": "^4.2.1",
     "framer-motion": "^11.2.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.379.0",
