--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@react-hook/window-size": "^3.1.1",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/react-window": "^1.8.8",
+    "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
