--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@react-hook/window-size": "^3.1.1",
+    "@tensorflow/tfjs": "^4.21.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/react-window": "^1.8.8",
     "@uidotdev/usehooks": "^2.4.1",
@@ -37,6 +38,7 @@
     "masonic": "^4.0.1",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
+    "nsfwjs": "^4.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
