--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.1",
     "@react-hook/window-size": "^3.1.1",
     "@tensorflow/tfjs": "^4.21.0",
@@ -32,6 +33,8 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "cookies-next": "^4.2.1",
+    "embla-carousel-autoplay": "^8.5.1",
+    "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.2.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.379.0",
